<resources>
    <string name="app_name">CleanEnergy</string>
    <string name="sign_in">Войти</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="statistic_day">Statistic day</string>
    <string name="statistic_week">Statistic week</string>
    <string name="statistic_month">Statistic month</string>
    <string name="choose_category">Выбор категории</string>
    <string name="costs">Costs</string>
    <string name="sign_out">Sign out</string>
    <string name="that_bought">That bought</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="count">Count</string>
    <string name="cost">Cost</string>
    <string name="payer">Payer</string>
    <string name="date_costs">Date costs</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="category_expenses">Category expenses</string>
    <string name="name_purchase">Name purchase</string>
    <string name="constant">Fixed</string>
    <string name="m_volatile">Volatile</string>
    <string name="incorrect_login_or_password">Incorrect login or password</string>
</resources>
