<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/form"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/tab_constant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/that_bought"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/customborder">

                    <Spinner
                        android:id="@+id/spinner_constant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab_steady"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/category_expenses"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/customborder">

                    <Spinner
                        android:id="@+id/spinner_category_expenses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </Spinner>
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/oval"
                    android:hint="@string/name_purchase"
                    android:textSize="16sp" />
            </LinearLayout>

        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/form"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/measurement_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/unit_of_measurement"
                            android:layout_alignParentTop="true"
                            android:layout_alignStart="@+id/unit_of_measurement"
                            android:layout_marginBottom="8dp"
                            android:text="@string/unit_of_measurement"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/count_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignTop="@+id/unit_of_measurement"
                            android:background="@drawable/oval"
                            android:hint="@string/count"
                            android:inputType="number" />

                        <LinearLayout
                            android:id="@+id/unit_of_measurement"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@+id/measurement_text_view"
                            android:layout_marginLeft="16dp"
                            android:layout_toEndOf="@+id/count_text"
                            android:layout_toRightOf="@+id/count_text"
                            android:background="@drawable/customborder">

                            <Spinner
                                android:id="@+id/spinner_unit_of_measurement"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            </Spinner>
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/payer_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/payer"
                            android:layout_alignParentTop="true"
                            android:layout_alignStart="@+id/payer"
                            android:layout_marginBottom="8dp"
                            android:text="@string/payer"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/cost_text"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignTop="@+id/payer"
                            android:background="@drawable/oval"
                            android:hint="@string/cost"
                            android:inputType="numberDecimal" />

                        <LinearLayout
                            android:id="@+id/payer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_below="@+id/payer_text_view"
                            android:layout_marginLeft="16dp"
                            android:layout_toEndOf="@+id/cost_text"
                            android:layout_toRightOf="@+id/cost_text"
                            android:background="@drawable/customborder">

                            <Spinner
                                android:id="@+id/spinner_payer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            </Spinner>
                        </LinearLayout>
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/date_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/oval"
                        android:hint="@string/date"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/form"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"
                        android:lines="5" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/primary"
                        android:text="@string/send"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</TabHost>